@@ -1,5 +1,8 @@
 /*
  * $Log: alloc.h,v $
+ * Revision 1.5  2024-05-12 00:10:20+05:30  mbhangui
+ * fix function prototypes
+ *
  * Revision 1.4  2020-12-02 14:50:38+05:30  Cprogrammer
  * changed return type of alloc() to void *
  *
@@ -17,7 +20,11 @@
 void           *alloc(unsigned int);
 void            alloc_free(char *);
 #ifdef _ALLOC_
+#ifdef __APPLE__
+int             alloc_re(void **, unsigned int, unsigned int);
+#else
 int             alloc_re();
+#endif
 #else
 int             alloc_re(void *, unsigned int, unsigned int);
 #endif
