@@ -20,6 +20,8 @@ Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
 08. tryshsgr.c, tryulong32.c, tryulong64.c: fix compiler warnings
 - 09/05/2024
 09. fix discarded-qualifier compiler warnings
+- 12/05/2024
+10. fix function prototypes
 
 * Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
 Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
